--- a/index.erb
+++ b/index.erb
@@ -1,6 +1,8 @@
 <h1>Welcome to this CRM!</h1>
 <p>Main menu</p>
 <ul>
-	<li><a href="/contacts">View all contacts</a></li>
+	<1>Welcome to <%= @crm_app_name %><1>
+	
+
 
 </ul>
