--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <p>Main menu</p>
 <ul>
 	<h1>Welcome to <%= @crm_app_name %><h1>
-	<li><a href="/contacts">View all contacacts</a></li>li>
+	<li><a href="/contacts">View all contacacts</a></li>
 
 
 
