--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,9 +1,11 @@
 <h1>All Contacts</h1>
-
+<li><a href="/contacts/new">Add new contact</a></li>
+  
 <ul>
 <% $rolodex.contacts.each do |contact| %>
   <li><%= contact.first_name %> <%= contact.last_name %></li>
   <li><%= contact.email %> <%= contact.note %></li>
+
   
 <% end %>
 </ul>
