--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,10 +1,12 @@
 <h1>All Contacts</h1>
-<li><a href="/contacts/new">Add new contact</a></li>
+<a href="/contacts/new">Add new contact</a>
   
 <ul>
 <% $rolodex.contacts.each do |contact| %>
   <li><%= contact.first_name %> <%= contact.last_name %></li>
   <li><%= contact.email %> <%= contact.note %></li>
+
+  <a href="/contacts/<%= contact.id %>">Details</a>
 
   
 <% end %>
