--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -2,7 +2,7 @@
 <a href="/contacts/new">Add new contact</a>
   
 <ul>
-<% @@rolodex.contacts.each do |contact| %>
+<% @contacts.each do |contact| %>
   <li><%= contact.first_name %> <%= contact.last_name %></li>
   <li><%= contact.email %> <%= contact.note %></li>
 
